--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
     <h2>Education</h2>
     <div class="edu-container">
       <div class="edu-card">
-        <img src="C:\Users\Admin\Pictures\school.jpeg" alt="School Image" />
+        <img src="school.jpeg" alt="School Image" />
         <h3>St.Ann's High School</h3>
         <p>Completed 10th(2022)</p>
       </div>
       <div class="edu-card">
-        <img src="C:\Users\Admin\Pictures\intetmediate.jpeg" alt="Intermediate Image" />
+        <img src="intetmediate.jpeg" alt="Intermediate Image" />
         <h3>FIITJEE JUNIOR COLLEGE</h3>
         <p>Completed 12th Grade (2022-2024)</p>
       </div>
       <div class="edu-card">
-        <img src="C:\Users\Admin\Pictures\college.jpeg" alt="College Image" />
+        <img src="college.jpeg" alt="College Image" />
         <h3>Chennai Institute Of Technology</h3>
         <p>Bachelor of Technology in Computer Science (2024-2025)</p>
       </div>
