Revamp portfolio layout and improve section animations
Refactored HTML structure for better semantics and consistency, updated section and contact layouts, and improved accessibility of social media links. Enhanced CSS with a modern color palette, card styling, responsive design, and animated section reveals. Rewrote JavaScript to use IntersectionObserver for efficient section reveal animations with a fallback for older browsers.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfolio of Harshith Varma Namboori, a Computer Science student and aspiring developer." />
   <meta name="keywords" content="Portfolio, Harshith Varma Namboori, Computer Science, Developer" />
-  <title>Harshith Varma Namboori
-    <h2 style="color: var(--primary); border-bottom: 3px solid var(--accent); display: inline-block;">Projects</h2>
-  </title>
+  <title>Harshith Varma Namboori</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <section class="hero">
+  <section class="hero section">
     <div class="overlay"></div>
     <div class="content">
       <h1>Hi, I'm Harshith Varma. Welcome to my portfolio website</h1>
@@ -27,21 +24,21 @@
   </section>
   <section class="about section" id="about">
     <h2>About Me</h2>
-    <p>Hello everyone! This is Harshith. I am a computer science students pursuing my Bachelor of engineering(BE) at 
-        Chennai Institute Of Technology(batch 2024-2028). I am a dedicated and curious student with a strong passion for 
+    <p>Hello everyone! This is Harshith. I am a computer science student pursuing my Bachelor of Engineering (BE) at 
+        Chennai Institute Of Technology (batch 2024-2028). I am a dedicated and curious student with a strong passion for 
         learning and personal growth. I take pride in being organized, responsible, and eager to take on challenges that 
         expand my knowledge and skills. Whether working independently or in a team, I strive to maintain a positive attitude 
         and deliver my best. I am especially interested in software development, AI, and web technologies, 
         and I’m always looking for opportunities to apply what I learn in meaningful, real-world ways.
     </p>
   </section>
-<section class="education section" id="education">
+  <section class="education section" id="education">
     <h2>Education</h2>
     <div class="edu-container">
       <div class="edu-card">
         <img src="school.jpeg" alt="School Image" />
         <h3>St.Ann's High School</h3>
-        <p>Completed 10th(2022)</p>
+        <p>Completed 10th (2022)</p>
       </div>
       <div class="edu-card">
         <img src="intetmediate.jpeg" alt="Intermediate Image" />
@@ -55,7 +52,7 @@
       </div>
     </div>
   </section>  
-  <section class="projects" id="projects" align="center">
+  <section class="projects section" id="projects">
     <h2>Projects</h2>
     <div class="project-grid">
       <div class="card">
@@ -70,26 +67,24 @@
     <a href="c:\Users\Admin\Documents\certifications\Resume.docx" target="_blank">Click to view my Resume</a>
   </section>
   <footer>
-  <section class="contact section" id="contact" align="left">
-    <h2>Contact Me</h2>
-    <p>If you have any questions or would like to get in touch, feel free to reach out!</p>
-    <ul class="social-media">
-        <section id="contact">
-              <li><i class="fab fa-whatsapp"></i> 
-                <a href="https://api.whatsapp.com/send/?phone=%2B919966383848&text&type=phone_number&app_absent=0">whatsapp</a>
-              </li>
-              <li><i class="fab fa-linkedin"></i> 
-                <a href="www.linkedin.com/in/harshith-varma116" target="_blank">LinkedIn</a>
-              </li>
-              <li><i class="fab fa-instagram"></i> 
-                <a href="https://www.instagram.com/harshith_varma116/" target="_blank">Instagram</a>
-              </li>
-              <li><i class="fab fa-facebook"></i>
-            <a href="https://www.facebook.com/harshith.varma.1694/">Facebook</a>
+    <section class="contact section" id="contact">
+      <h2>Contact Me</h2>
+      <p>If you have any questions or would like to get in touch, feel free to reach out!</p>
+      <ul class="social-media">
+        <li><i class="fab fa-whatsapp"></i> 
+          <a href="https://api.whatsapp.com/send/?phone=%2B919966383848&text&type=phone_number&app_absent=0">whatsapp</a>
         </li>
-          </section>
-          </ul>
-  </section>
+        <li><i class="fab fa-linkedin"></i> 
+          <a href="https://www.linkedin.com/in/harshith-varma116" target="_blank">LinkedIn</a>
+        </li>
+        <li><i class="fab fa-instagram"></i> 
+          <a href="https://www.instagram.com/harshith_varma116/" target="_blank">Instagram</a>
+        </li>
+        <li><i class="fab fa-facebook"></i>
+          <a href="https://www.facebook.com/harshith.varma.1694/">Facebook</a>
+        </li>
+      </ul>
+    </section>
     <p>© 2025 Harshith Varma Namboori</p>
   </footer>
   <script src="script.js"></script>
