--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   </section>
   <section class="resume section" id="resume">
     <h2>Resume</h2>
+    <a href="Resume.pdf" target="_blank">Click to view my Resume</a>
   </section>
   <footer>
     <section class="contact section" id="contact">
