--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="  <section class="about section" id="about">
+    <h2><i class="fas fa-user-astronaut"></i> About Me</h2>
+    <div class="card">
+      <p>🚀 Hello everyone! This is Harshith. I am a computer science student pursuing my Bachelor of Engineering (BE) at 
+          Chennai Institute Of Technology (batch 2024-2028). I am a dedicated and curious student with a strong passion for 
+          learning and personal growth. I take pride in being organized, responsible, and eager to take on challenges that 
+          expand my knowledge and skills. Whether working independently or in a team, I strive to maintain a positive attitude 
+          and deliver my best. I am especially interested in software development, AI, and web technologies, 
+          and I'm always looking for opportunities to apply what I learn in meaningful, real-world ways. ⚡
+      </p>
+    </div>
+  </section>d>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfolio of Harshith Varma Namboori, a Computer Science student and aspiring developer." />
   <meta name="keywords" content="Portfolio, Harshith Varma Namboori, Computer Science, Developer" />
-  <title>Harshith Varma Namboori</title>
+  <title>Harshith Varma Namboori | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <section class="hero section">
     <div class="overlay"></div>
     <div class="content">
-      <h1>Hi, I'm Harshith Varma. Welcome to my portfolio website</h1>
-      <p>Computer Science Student & Aspiring Developer</p>
-      <a href="#about" class="btn-outline">About Me</a>
-      <a href="#education" class="btn-outline">My Education</a>
-      <a href="#projects" class="btn-outline">My Projects</a>
-      <a href="#resume" class="btn-outline">View Resume</a>
-      <a href="#contact" class="btn-outline">Contact Me</a>
+      <h1>✨ Hi, I'm Harshith Varma ✨<br>Welcome to my Hi-Tech Portfolio</h1>
+      <p>🚀 Computer Science Student & Aspiring Developer 🌟</p>
+      <div class="nav-buttons">
+        <a href="#about" class="btn-outline"><i class="fas fa-user"></i> About Me</a>
+        <a href="#education" class="btn-outline"><i class="fas fa-graduation-cap"></i> Education</a>
+        <a href="#projects" class="btn-outline"><i class="fas fa-code"></i> Projects</a>
+        <a href="#resume" class="btn-outline"><i class="fas fa-file-alt"></i> Resume</a>
+        <a href="#contact" class="btn-outline"><i class="fas fa-envelope"></i> Contact</a>
+      </div>
     </div>
   </section>
   <section class="about section" id="about">
@@ -33,46 +48,51 @@
     </p>
   </section>
   <section class="education section" id="education">
-    <h2>Education</h2>
+    <h2><i class="fas fa-graduation-cap"></i> Education Journey</h2>
     <div class="edu-container">
       <div class="edu-card">
         <img src="school.jpeg" alt="School Image" />
-        <h3>St.Ann's High School</h3>
-        <p>Completed 10th (2022)</p>
+        <h3><i class="fas fa-school"></i> St.Ann's High School</h3>
+        <p>📚 Completed 10th (2022)</p>
       </div>
       <div class="edu-card">
         <img src="intetmediate.jpeg" alt="Intermediate Image" />
-        <h3>FIITJEE JUNIOR COLLEGE</h3>
-        <p>Completed 12th Grade (2022-2024)</p>
+        <h3><i class="fas fa-university"></i> FIITJEE JUNIOR COLLEGE</h3>
+        <p>📖 Completed 12th Grade (2022-2024)</p>
       </div>
       <div class="edu-card">
         <img src="college.jpeg" alt="College Image" />
-        <h3>Chennai Institute Of Technology</h3>
-        <p>Bachelor of Technology in Computer Science (2024-2025)</p>
+        <h3><i class="fas fa-laptop-code"></i> Chennai Institute Of Technology</h3>
+        <p>💻 Bachelor of Technology in Computer Science (2024-2028)</p>
       </div>
     </div>
   </section>  
   <section class="projects section" id="projects">
-    <h2>Projects</h2>
+    <h2><i class="fas fa-code"></i> My Projects</h2>
     <div class="project-grid">
       <div class="card">
-        <h3>Project One</h3>
-        <p>Tech Stack: HTML, CSS, JS</p>
-        <a href="#">GitHub</a> | <a href="#">Live Demo</a>
+        <h3><i class="fas fa-rocket"></i> Hi-Tech Portfolio</h3>
+        <p>🌟 Tech Stack: HTML, CSS, JavaScript</p>
+        <p>Modern responsive portfolio with animations</p>
+        <a href="#" class="btn"><i class="fab fa-github"></i> GitHub</a>
+        <a href="#" class="btn"><i class="fas fa-external-link-alt"></i> Live Demo</a>
       </div>
     </div>
   </section>
   <section class="resume section" id="resume">
-    <h2>Resume</h2>
-    <a href="Resume.pdf" target="_blank">Click to view my Resume</a>
+    <h2><i class="fas fa-file-alt"></i> Resume</h2>
+    <div class="card">
+      <p>📄 Download my professional resume to learn more about my skills and experience</p>
+      <a href="Resume.pdf" target="_blank" class="btn"><i class="fas fa-download"></i> Download Resume</a>
+    </div>
   </section>
   <footer>
     <section class="contact section" id="contact">
-      <h2>Contact Me</h2>
-      <p>If you have any questions or would like to get in touch, feel free to reach out!</p>
+      <h2><i class="fas fa-envelope"></i> Get In Touch</h2>
+      <p>🌟 If you have any questions or would like to collaborate, feel free to reach out! 🚀</p>
       <ul class="social-media">
         <li><i class="fab fa-whatsapp"></i> 
-          <a href="https://api.whatsapp.com/send/?phone=%2B919966383848&text&type=phone_number&app_absent=0">whatsapp</a>
+          <a href="https://api.whatsapp.com/send/?phone=%2B919966383848&text&type=phone_number&app_absent=0">WhatsApp</a>
         </li>
         <li><i class="fab fa-linkedin"></i> 
           <a href="https://www.linkedin.com/in/harshith-varma116" target="_blank">LinkedIn</a>
@@ -85,7 +105,7 @@
         </li>
       </ul>
     </section>
-    <p>© 2025 Harshith Varma Namboori</p>
+    <p>✨ © 2025 Harshith Varma Namboori | Crafted with 💖 and Code 🚀</p>
   </footer>
   <script src="script.js"></script>
 </body>
